Corrected alignment

--- a/styles/header.scss
+++ b/styles/header.scss
@@ -146,7 +146,7 @@ header {
   header {
     bottom: 89%;
 
-    padding: $body-padding $body-padding $body-padding 14%;
+    padding: $body-padding $body-padding $body-padding 10vw;
 
     h1 {
       flex-basis: 100%;
